// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHub API Client apiCalls should match fetchRepositories call 1`] = `
Object {
  "mutator": [Function],
  "requestOptions": Object {
    "headers": Object {
      "Accept": "application/vnd.github.v3+json",
    },
  },
  "url": "https://api.github.com/users/carloscuesta/repos",
}
`;

exports[`GitHub API Client apiCalls should match fetchUserInformation call 1`] = `
Object {
  "mutator": [Function],
  "requestOptions": Object {
    "headers": Object {
      "Accept": "application/vnd.github.v3+json",
    },
  },
  "url": "https://api.github.com/users/carloscuesta",
}
`;

exports[`GitHub API Client mutators transformRepositories should match the mutated repositories 1`] = `
Array [
  Object {
    "description": "An emoji guide for your commit messages. 😜 ",
    "language": "JavaScript",
    "name": "gitmoji",
    "stars": 7323,
    "url": "https://github.com/carloscuesta/gitmoji",
  },
]
`;

exports[`GitHub API Client mutators transformUserInformation should match the mutated user information 1`] = `
Object {
  "followers": 970,
  "repositories": 17,
}
`;
